<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mavu</string>
    <string name="account_maint">Account Info</string>
    <string name="account_view">Account</string>
    <string name="account_edit">Edit Account</string>
    <string name="account_save">Save Account</string>
    <string name="create_post">Create Post</string>
    <string name="save_post"> Save Post </string>
    <string name="post_view">Post Info</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">Mavu</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="aFName">First Name</string>
    <string name="aLName">Last Name</string>
    <string name="aEmail">Email (Used to Login)</string>
    <string name="aDOB">Date Of Birth</string>
    <string name="aPassword">Password</string>
    <string name="aConfirmPass">Confirm Password</string>
    <string name="aLikes">Likes</string>
    <string name="aDislikes">Dislikes</string>
    <string name="btnViewPosts">View Posts</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="prefs_account_id">Account ID</string>
    <string name="preferred_Account">prefs_account_key</string>
    <string name="prefTitle">Settings</string>
    <string name="prefSummary">Set your Post Result Filters</string>
    <string name="sort_option_default_value">1</string>
    <string name="dialogTitle">Choose Local Preferred Account</string>
    <string name="prefs_Acct_Summary">Preferred Account</string>
    <string name="menu_prefs_title">Settings</string>
    <string name="menu_quit_title">Quit</string>
    <string name="prefs">Settings</string>
    <string name="prefs_city">City</string>
    <string name="prefs_category">Category</string>
    <string name="prefs_music_cat">Show Music</string>
    <string name="prefs_food_cat">Show Food</string>
    <string name="prefs_business_cat">Show Businesses</string>
    <string name="view_owner">View Owner</string>
    <string name="Title">Event Title</string>
    <string name="Category">Category</string>
    <string name="Address">Address</string>
    <string name="City">City</string>
    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="setTime">Set Time</string>
    <string name="setDate">Set Date</string>
    <string name="Desc">Description</string>

    <string-array name="searchOptions">
        <item>By Title</item>
        <item>By Date</item>
        <item>By Person</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="myPosts">My Posts</string>

</resources>