<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"/>
<<<<<<< HEAD
    <item android:id="@+id/accountMenu"
        android:title="@string/account_view"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/createPost"
        android:title="@string/create_post"
        android:icon="@drawable/ic_menu_add"
        android:showAsAction="ifRoom"/>
=======
    
    <!-- Test icon for creating post     todo:change icon!!!! -->
    <item android:id="@+id/create_post"
        android:title="@string/create_post"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="ifRoom"
        />
>>>>>>> create_post.java
</menu>
