<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

  <!--    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" > -->
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/aFName" />


	    <EditText
	        android:id="@+id/txtFName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="textPersonName" >

	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/aLName" />

	    <EditText
	        android:id="@+id/txtLName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName" >
   			<requestFocus />
	    </EditText>

    
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/aEmail"></TextView>

	    <EditText
	        android:id="@+id/txtEmail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName" >
   			
	    </EditText>


	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/aDOB"></TextView>

	    <EditText
	        android:id="@+id/txtDOB"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="date" >

	    </EditText>

	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/aPassword"></TextView>

	    <EditText
	        android:id="@+id/txtPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="textPassword" >

	    </EditText>
    
	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/aConfirmPass"></TextView>

	    <EditText
	        android:id="@+id/txtConfirmPassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="textPassword" >

	    </EditText>

    
	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/aLikes"></TextView>
	    
	     <LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	     <TextView
	        android:id="@+id/lblLikes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"></TextView>

	    </LinearLayout>  
	     <LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/textView8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/aDislikes"></TextView>
	  

	   <TextView
	        android:id="@+id/lblDislikes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"></TextView>
      </LinearLayout>

   	<Button
	        android:id="@+id/btnViewPosts"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnViewPosts" />
	   



</LinearLayout>