<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:layout_marginLeft="8dp" 
     android:layout_marginRight="8dp" >

   <!--   <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >-->
        
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

      <EditText
          android:id="@+id/txtTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:inputType="textCapSentences"
          android:ems="10" >

          <requestFocus />
      </EditText>
 	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:layout_marginTop="15dp"
	    android:layout_marginBottom="25dp">
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Category"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
		
	    <Spinner
	        android:id="@+id/spnCategory"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:entries="@array/list_categories"
	        android:layout_weight="1" />
    	</LinearLayout>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

      <LinearLayout 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:orientation="horizontal">
	        
	    <EditText
	        android:id="@+id/txtDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="date"
	        android:enabled="false"  />
	
		    
		     <Button
		        android:id="@+id/btnSetDatePost"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="showDatePickerDialog"
		        android:text="@string/setDate" />
		</LinearLayout>
    

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      <LinearLayout 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:orientation="horizontal">

        <!--   <TimePicker
              android:id="@+id/timePicker1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1" /> -->
	        
	     <EditText
	        android:id="@+id/txtTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="time|text"
	        android:enabled="false" />
	
		    
		     <Button
		        android:id="@+id/btnSetTimePost"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="showTimePickerDialog"
		        android:text="@string/setTime" /> 
		</LinearLayout>


    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textCapSentences"
        android:ems="10" />
    
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPostalAddress|textCapSentences" />

    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Desc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine|textCapSentences" />



</LinearLayout>