<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp" 
    android:paddingRight="8dp">

  <!--    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" > -->
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/aFName" />


	    <EditText
	        android:id="@+id/txtFName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName"
	        android:enabled="false">

	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/aLName" />

	    <EditText
	        android:id="@+id/txtLName"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName"
	        android:enabled="false" >
 
	    </EditText>

    
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/aEmail"></TextView>

	    <EditText
	        android:id="@+id/txtEmail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName"
	        android:enabled="false">
   			
	    </EditText>


	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/aDOB"></TextView>

	    <EditText
	        android:id="@+id/txtDOB"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="date" 
	        android:enabled="false">

	    </EditText>

    
	    <LinearLayout  
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <TextView
		        android:id="@+id/textView7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/aLikes"
		        android:layout_marginLeft="10dp"></TextView>
		    

		     <TextView
		        android:id="@+id/lblLikes"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"></TextView>
	</LinearLayout>
		     
	<LinearLayout  
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

		    <TextView
		        android:id="@+id/textView8"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/aDislikes"></TextView>
		  
	
		   <TextView
		        android:id="@+id/lblDislikes"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="10dp"></TextView>
      </LinearLayout>

	   



</LinearLayout>